In index.html removed divs that represented columns of four buttons. Applied flex wrap so that buttons align correctly without the help of column divs. In styles.css created colorway for the calculator and its components like buttons and display.

--- a/style.css
+++ b/style.css
@@ -3,22 +3,24 @@
     width: 32px;
     text-align: center;
     align-items: center;
-    flex: 1;
 }
 
 #buttons {
     display: flex;
     flex-direction: row;
     width: auto;
-    height: 120px;
+    height: 170px;
     flex-wrap: wrap;
     overflow: auto;
-    padding: 4px;
+    align-items: center;
+    justify-content: center;
 }
 
 #calculator {
-    width: 150px;
+    width: 190px;
     padding: 16px;
+    background-color: #3484CB;
+    border-radius: 24px;
 }
 
 #rows {
@@ -27,12 +29,16 @@
 }
 
 #display {
-    height: 32px;
     border: 4px black groove;
     width: auto;
     height: auto;
     border-radius: 4px;
     text-align: end;
+    background-color: antiquewhite;
+    padding: 4px;
+    margin: 4px;
+    font-size: large;
+    margin-top: 8px;
 }
 
 html {
@@ -44,4 +50,17 @@ html {
 button {
     margin: 4px;
     background-color: aquamarine;
+    border-radius: 4px;
+    height: 32px;
+    width: 32px;
+    text-align: center;
+    align-items: center;
+    border-color: #7FEAFF;
+    color: #D47FFF;
+}
+
+#clear {
+    background-color: #FF7FAA;
+    border-color: #FF947F;
+    color: #AAFF7F;
 }
